# llm-inference-simulator

./: README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
examples/: batch_duration_demo.py  batching_strategies.py  disaggregated.py  metrics_visualization.py  queue_growth.py
src/simulator/: __init__.py  batcher.py  engine.py  extra.py  load_generator.py  metrics.py  plotting.py  request.py  slot_state.py
