[project]
name = "simulator"
version = "0.1.0"
description = "Prefill and Decode Latency Simulator for LLM Inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.0.0",
    "matplotlib>=3.9.3",
    "numpy>=2.2.0",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
